--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-/config/options.json
-/bulid.bat
-/dist/*
-/bulid/main/*
-/venv/*
-/__pycache__/*
-/utlis/__pycache__/*
+config/
+*.bat
+main/
+dist/
+/.vscode/
+venv/
+__pycache__/
